# eurecarr

./: .gitignore  99-eurecarr.rules  README.md
eurecarr_core/: CMakeLists (copy).txt  CMakeLists.txt  package.xml  rviz.launch  setup.py
eurecarr_core/config/: MessageInterfaceParams.cfg  c94_m8f_rover.yaml  c94_m8n_rover.yaml
eurecarr_core/include/: low_pass_filter.h  param_getter.h
eurecarr_core/launch/: EurecarR.launch  EurecarRalpha-2020-05-24.launch  EurecarRalpha.launch  EurecarRalphaPlanB.launch  EurecarRbeta.launch  GPS_IMU.launch  Hokuyo.launch  MessageInterface.launch  MessageInterfaceAll.launch  MessageInterfaceGPSIMU.launch  MessageInterfaceJoy.launch  MessageInterfaceJoyUDP.launch  MessageInterface_GPS_IMU.launch  StateEstimator.launch  \
eurecarr_core/rviz/: eurecarXO1.rviz  fieldtestHoldLocalPath.rviz  multipleCarsRvizHILS.rviz  optitrackRviz.rviz  persistent_settings  simulation.rviz
eurecarr_core/script/: frameBroadcaster.py  simulate_dynamics.py
eurecarr_core/src/MessageInterface/: .MessageInterface.h.swp  CMakeLists.txt  MessageInterface.cpp  MessageInterface.h
eurecarr_perception/: CMakeLists.txt  package.xml  setup.py
eurecarr_perception/cfg/: TrajectoryPredictionParams.cfg  TrajectoryPredictionParams_2020-06-09.cfg
eurecarr_perception/include/eurecarr_perception/: param_getter.h
eurecarr_perception/include/eurecarr_perception/Obstructor/: Obstructor.h
eurecarr_perception/include/eurecarr_perception/TrajectoryPrediction/: TrajectoryPrediction_2020-06-09.h  TrajectoryPrediction_desktop.h
eurecarr_perception/launch/: obstructor.launch  obstructor_alpha.launch  obstructor_beta.launch  trajectoryPrediction.launch  trajectoryPrediction_alpha.launch  trajectoryPrediction_alpha_desktop.launch
eurecarr_perception/src/obstructor/: CMakeLists.txt  Obstructor.cpp
eurecarr_perception/src/trajectoryPrediction/: CMakeLists.txt  TrajectoryPrediction.cpp  TrajectoryPrediction_2020-06-09.cpp  TrajectoryPrediction_desktop.cpp  waypoints.txt
eurecarr_simulation/: CMakeLists.txt  package.xml  setup.py
eurecarr_simulation/cfg/: dynamics_simulation.rviz  sim_simple_f1.yaml
eurecarr_simulation/launch/: simVis.launch
eurecarr_simulation/script/: dynamics.py  joystick.py  simulate_dynamics.py  simulate_dynamics_no_tf.py
eurecarr_simulation/script/module/: model.py
eurecarr_simulation/src/for_model_simulation/all_track_w_inout_scaling/: checkpoint_4000-0.10874450206756592.pt
eurecarr_simulation/src/for_model_simulation/all_track_w_scaling/: checkpoint_9000-0.1732824593782425.pt  checkpoint_9000-9.68776730587706e-05.pt
eurecarr_simulation/src/for_model_simulation/all_track_wo_scaling/: checkpoint_0-0.6762017607688904.pt  checkpoint_1000-0.0002718334726523608.pt
eurecarr_simulation/src/for_model_simulation/austria_only/: checkpoint_0-0.01587553508579731.pt  checkpoint_0-0.2892431318759918.pt  checkpoint_1000-0.0001413648424204439.pt  checkpoint_2000-0.00012714049080386758.pt  checkpoint_3000-0.00011154846288263798.pt  checkpoint_4000-0.00010090738214785233.pt  checkpoint_5000-0.000147825907333754.pt  checkpoint_9000-8.842071110848337e-05.pt
eurecarr_simulation/src/torch_to_npz/: checkpoint_4000-0.10874450206756592_20201117-215113.npz  checkpoint_9000-0.07857070863246918.pt  checkpoint_9000-0.07857070863246918_20201117-234309.npz  checkpoint_9000-0.10731091350317001.pt  checkpoint_9000-0.10731091350317001_20201117-144116.npz  checkpoint_9000-0.41358309984207153.pt  checkpoint_9000-0.41358309984207153_20201118-124918.npz  model.py  torch_to_npz.py
